@@ -297,9 +297,9 @@ public class MCRUploadHandlerIFS extends MCRUploadHandler {
     private void updateMainFile() throws IOException, MCRAccessException {
         String mainFile = derivate.getDerivate().getInternals().getMainDoc();
         MCRObjectDerivate der = MCRMetadataManager.retrieveMCRDerivate(getOrCreateDerivateID()).getDerivate();
-        boolean hasNoMainFile = ((der.getInternals().getMainDoc() == null) || (der.getInternals().getMainDoc().trim()
-            .isEmpty()));
-        if ((mainFile == null) || mainFile.trim().isEmpty() && hasNoMainFile) {
+        boolean hasNoMainFile
+            = ((der.getInternals().getMainDoc() == null) || (der.getInternals().getMainDoc().isBlank()));
+        if ((mainFile == null) || mainFile.isBlank() && hasNoMainFile) {
             mainFile = getPathOfMainFile();
             LOGGER.debug("Setting main file to {}", mainFile);
             derivate.getDerivate().getInternals().setMainDoc(mainFile);
